# diffusion-gemma-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: __init__.py  config.py  engine.py  mock_engine.py  schemas.py  server.py
slurm/: serve.sbatch
web/: index.html
web/css/: styles.css
web/js/: app.js  howto.js  playground.js  slides.js
